--- a/index.html
+++ b/index.html
@@ -6,10 +6,10 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
-    <meta name="description" content="Professor at Université Paris Ouest<br/> LIP6 UMR 7606 CNRS
+    <meta name="description" content="Associate Professor<br/> Université Rennes 1
 ">
-    <meta name="author" content="Pascal Poizat">
-    <title>pascal.poizat</title>
+    <meta name="author" content="Arthur Charpentier">
+    <title>arthur.charpentier</title>
 
     <!-- Bootstrap -->
     <link rel="stylesheet" href="/css/main.css">
@@ -48,7 +48,7 @@
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
             </button>
-            <a class="navbar-brand" href="/index.html">pascal.poizat</a>
+            <a class="navbar-brand" href="/index.html">arthur.charpentier</a>
         </div>
         <div id="navbar" class="collapse navbar-collapse">
             <ul class="nav navbar-nav">
@@ -131,15 +131,15 @@
         <div class="row">
 
             <div class="col-sm-3">
-                <div class="media personal-picture"><img src=images/pascalpoizat.jpg alt="personal picture"/></div>
+                <div class="media personal-picture"><img src=images/arthurcharpentier.jpg alt="personal picture"/></div>
             </div>
 
             <div class="col-sm-9">
-                <h3>Professor | Professeur des Universités</h3>
+                <h3>Associate Professor | Maître de Conférences</h3>
                 <p class="lead">
-                    Dr HDR<a href="https://en.wikipedia.org/wiki/Habilitation">*</a><br/>
-                    <a href="https://www.u-paris10.fr">Université Paris Ouest</a><br/>
-                    <a href="http://www.lip6.fr">LIP6 UMR 7606 CNRS</a>
+                    HDR<a href="https://en.wikipedia.org/wiki/Habilitation">*</a><br/>
+                    <a href="https://www.univ-rennes1.fr/">Université Rennes 1</a><br/>
+                    <a href="http://crem.univ-rennes1.fr/">CREM -  UMR CNRS 6211</a>
                 </p>
             </div>
 
