--- a/index.html
+++ b/index.html
@@ -6,8 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
-    <meta name="description" content="Associate Professor<br/> Université Rennes 1
-">
+    <meta name="description" content="Associate Professor<br/> Université Rennes 1">
     <meta name="author" content="Arthur Charpentier">
     <title>arthur.charpentier</title>
 
@@ -16,7 +15,7 @@
     <!-- OLD TODO : remove
     <link rel="canonical" href="http://pascalpoizat.github.io/">
     -->
-    <link rel="canonical" href="http://pascalpoizat.github.io/">
+    <link rel="canonical" href="http://freakonometrics.github.io/">
     <!-- Font Awesome -->
     <link rel="stylesheet" href="/font-awesome-4.5.0/css/font-awesome.min.css">
 
